# openpresso-ctl

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/actions/setup-conan-remotes/: action.yml
.github/workflows/: ci.yml  release-publish.yml
cmake/: openpresso-ctl-docs.cmake
docs/: CMakeLists.txt  Doxyfile.in  custom.css  header.html
docs/pages/: index.md  installation.md  openpresso-ctl.1.md  profiles-and-monitoring.md  reference.md  usage.md
packaging/: CMakeLists.txt
src/: commands.cpp  commands.hpp  main.cpp  util.hpp
