set(OPENPRESSO_CTL_TARGET ${CMAKE_SYSTEM_PROCESSOR} CACHE STRING "")

set(PACKAGE_FILE_NAME "openpresso-ctl_${OPENPRESSO_CTL_VERSION}_${OPENPRESSO_CTL_TARGET}")

# --- CPack ---
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_NAME "openpresso-ctl")
set(CPACK_DEBIAN_FILE_NAME "${PACKAGE_FILE_NAME}")
set(CPACK_PACKAGE_VERSION "${OPENPRESSO_CTL_VERSION}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "OpenPresso command line utility")
set(CPACK_PACKAGE_CONTACT "Openpresso <openpresso@gmail.com>")
set(CPACK_DEBIAN_PACKAGE_SECTION "misc")
set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
set(CPACK_DEBIAN_PACKAGE_CONTROL_STRICT_PERMISSION TRUE)
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6, libstdc++6, libgcc-s1")

include(CPack)

install(FILES "${PROJECT_BINARY_DIR}/${PACKAGE_FILE_NAME}.deb"
    DESTINATION .
    COMPONENT Installer
    EXCLUDE_FROM_ALL
)
